- Support separators in action links
- Support :popup position, using jquery-ui dialog, but can be replaced with other library overriding ActiveScaffold.open_popup and ActiveScaffold.close_popup JS functions
- Use column.label in human conditions, same as form

= 3.7.10
- Move code from on_create.js.erb to partials, so it's easier to change parts, e.g. how new record is rendered
- Don't reload after deleting last record if pagination is disabled

= 3.7.9
- Add css_class to action links, to avoid changing name, it may result confusing, deprecate name setter.
- Add buttons to check all and uncheck all on :select form ui for collection associations, and draggable lists (active_scaffold_checkbox_list).
- Add hidden field with locking column in base_form partial for persisted records automatically, if model uses optimistic locking.
- Add on_stale_object_error when StaleObjectError is rescued, to allow customization.
- Fix search_ui :select_multiple, which was broken when operator select was added.
- Deprecate ActiveScaffold.js_framework as will be removed in 4.0

= 3.7.8
- Rollback previous behaviour when submitting empty values, broken when default_value was added. Default value set in column is not used when trying to save empty value, DB default is used in that case, and save NULL when string is empty, as before.
- Support operators =, null and not null for :select search_ui, so it's possible to search for NULL with :select search UI.

= 3.7.7
- Fix usage with mongoid, broken on 3.7.5
- Support proc or lambda in label of action links
- Set successful to false when update_column is not authorized for the column
- Use action link's label for flash message when custom action is not authorized
- Add default_value to columns, so default_value can be defined in AS config, overriding DB default
- Fix caching query from association_klass_scoped in subforms, when returns different queries for the same association on different rows

= 3.7.6