@@ -6,7 +6,7 @@
       <%= content_tag :div, class: 'filtered-message',
                       style: ('display:none;' unless @filtered),
                       data: ({search: search_params || ''} if active_scaffold_config.store_user_settings && respond_to?(:search_params)) do %>
-        <%= @filtered.is_a?(Array) ? render(:partial => 'human_conditions', :locals => {:columns => @filtered}) : as_(active_scaffold_config.list.filtered_message) %>
+        <div><%= @filtered.is_a?(Array) ? render(:partial => 'human_conditions', :locals => {:columns => @filtered}) : as_(active_scaffold_config.list.filtered_message) %></div>
         <% if active_scaffold_config.list.show_search_reset && @filtered -%>
         <div class="reset">
           <%= loading_indicator_tag(:action => :record, :id => nil) %>
