@@ -7,6 +7,7 @@
 - Support separators in action links
 - Support :popup position, using jquery-ui dialog, but can be replaced with other library overriding ActiveScaffold.open_popup and ActiveScaffold.close_popup JS functions
 - Use column.label in human conditions, same as form
+- Don't overlap 'click to reset' with long human conditions message
 
 = 3.7.10
 - Move code from on_create.js.erb to partials, so it's easier to change parts, e.g. how new record is rendered
